# portfolio-dashboard

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  backup.bat  backup_silent.bat  docker-compose.aran.yml  docker-compose.yml  pyproject.toml  register_autobackup.bat  run.bat  start_silent.vbs  stop.bat  unregister_autobackup.bat  update.sh
.streamlit/: config.toml
config/: tax_rules.yaml
docs/: DEPLOYMENT.md
src/: analytics.py  auth.py  backup.py  db.py  exports.py  prices.py  profile_config.py  style.py  tax.py  ui_components.py
src/views/: accounts_admin.py  charts.py  corp_etf.py  holdings_admin.py  stocks.py  summary.py  tax_view.py  transactions.py
tests/: test_analytics.py  test_auth.py  test_backup.py  test_exports.py  test_holdings.py  test_page_registry.py  test_personal_mode_views.py  test_profile_config.py  test_tax.py  test_transactions.py
